harbor-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      ingress.kubernetes.io/proxy-body-size: "0"
      ingress.kubernetes.io/ssl-redirect: "true"
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/proxy-buffering: "off"
      nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.tls: "true"
    creationTimestamp: "2025-01-23T18:06:07Z"
    generation: 1
    labels:
      app: harbor
      app.kubernetes.io/instance: harbor
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: harbor
      app.kubernetes.io/part-of: harbor
      app.kubernetes.io/version: 2.12.2
      chart: harbor
      heritage: Helm
      release: harbor
    name: harbor-ingress
    namespace: chilled-northcutt
    resourceVersion: "1833483106"
    uid: b9fee99d-418d-4a55-83f0-3d5c93896b31
  spec:
    rules:
    - host: chilled-northcutt.container-registry.com
      http:
        paths:
        - backend:
            service:
              name: harbor-core
              port:
                number: 80
          path: /api/
          pathType: Prefix
        - backend:
            service:
              name: harbor-core
              port:
                number: 80
          path: /service/
          pathType: Prefix
        - backend:
            service:
              name: harbor-core
              port:
                number: 80
          path: /v2/
          pathType: Prefix
        - backend:
            service:
              name: harbor-core
              port:
                number: 80
          path: /c/
          pathType: Prefix
        - backend:
            service:
              name: harbor-portal
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - chilled-northcutt.container-registry.com
      secretName: harbor-core-cert-tls
  status:
    loadBalancer:
      ingress:
      - ip: 51.158.57.178
kind: List
metadata:
  resourceVersion: ""
